add convert amount endpoint
